--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: 'en-US' }}">
 
 <head>
     <meta charset="UTF-8">
@@ -12,19 +12,14 @@
 </head>
 
 <body>
-    <header class="page-header" role="banner">
-        <h1 class="project-name">{{ page.title | default: site.title }}</h1>
-        <h2 class="project-tagline">{{ page.description | default: site.description }}</h2>
-        <!-- todo: add icons for websites -->
-    </header>
-
+    {%- include header.html -%}
     <main id="content" class="main-content" role="main">
-        {{ content }}
-
-        <footer class="site-footer">
-            <!-- todo: footer -->
-        </footer>
+        <!-- {{ content }} -->
+        {%- if site.data.education.size > 0 -%}
+            {%- include education.html -%}
+        {%- endif -%}
     </main>
+    {%- include footer.html -%}
 </body>
 
 </html>
