--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
 <body>
     {%- include header.html -%}
     <main id="content" class="main-content" role="main">
+        {%- if site.data.experience.size > 0 -%}
+            {%- include experience.html -%}
+        {%- endif -%}
         {%- if site.data.education.size > 0 -%}
             {%- include education.html -%}
         {%- endif -%}
