--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,4 +1,4 @@
-<div class="education">
+<div class="section">
     <h2>Education</h2>
     {% for education in site.data.education %}
         {% include item.html item=education %}
