--- a/_includes/skill.html
+++ b/_includes/skill.html
@@ -1,8 +1,9 @@
 <div class="section">
     <h2>Skills</h2>
-    <h3>
-        {% for skill in site.data.skill %}
-        <span class="badge badge-secondary">{{ skill }}</span>
-        {% endfor %}
-    </h3>
+    {% for category in site.data.skill %}
+    <h5>{{ category.category }}</h5>
+    <h5>
+        {% include badges.html item=category.skills %}
+    </h5>
+    {% endfor %}
 </div>
