--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,5 +1,5 @@
 <div class="section">
-    <h2>Projects</h2>
+    <h1 class="display-4">Projects</h1>
     {% for project in site.data.project %}
         {% include card.html item=project %}
     {% endfor %}
