--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,5 +1,5 @@
 <div class="section">
-    <h2>Education</h2>
+    <h1 class="display-4">Education</h1>
     {% for education in site.data.education %}
         {% include item.html item=education %}
     {% endfor %}
