--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,5 +1,5 @@
 <div class="section">
-    <h2>Experience</h2>
+    <h1 class="display-4">Experience</h1>
     {% for experience in site.data.experience %}
         {% include item.html item=experience %}
     {% endfor %}
