--- a/_includes/skill.html
+++ b/_includes/skill.html
@@ -1,5 +1,5 @@
 <div class="section">
-    <h2>Skills</h2>
+    <h1 class="display-4">Skills</h1>
     {% for category in site.data.skill %}
     <h5>{{ category.category }}</h5>
     <h5>
