--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
         {%- if site.data.project.size > 0 -%}
             {%- include project.html -%}
         {%- endif -%}
+
+        {%- if site.data.other.size > 0 -%}
+            {%- include other.html -%}
+        {%- endif -%}
     </main>
     {%- include footer.html -%}
 </body>
