Add fontawesome icons, Add socials

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,3 +26,17 @@
 .section {
     margin-top: 2rem;
 }
+
+.site-footer {
+    padding: 1.5rem 0 2.5rem 0;
+    color: #999;
+    border-top: .05rem solid #e5e5e5;
+}
+
+.socials {
+    a {
+        color: #999;
+        padding: 10px;
+        text-decoration-line: none;
+    }
+}
