--- a/_includes/badges.html
+++ b/_includes/badges.html
@@ -1,3 +1,3 @@
 {% for badge in include.item %}
-    <span class="badge badge-secondary">{{ badge }}</span>
+    <span class="badge badge-secondary mr-1">{{ badge }}</span>
 {% endfor %}
