--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,16 @@
-<footer class="site-footer">
-    <!-- todo: footer -->
+<footer class="site-footer row">
+    <div class="col-auto mr-auto">
+        &copy; {{ site.title }}
+    </div>
+    <div class="col-auto socials">
+        <a href="mailto:{{ site.email }}">
+            <i class="far fa-envelope fa-lg"></i></a>
+        <a href="https://github.com/{{ site.github_username }}" target="_blank">
+            <i class="fab fa-github fa-lg"></i></a>
+        <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank">
+            <i class="fab fa-linkedin fa-lg"></i></a>
+        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
+            <i class="fab fa-twitter fa-lg"></i>
+        </a>
+    </div>
 </footer>
