--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/fontawesome.min.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/regular.min.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/brands.min.css' | relative_url }}">
 </head>
 
 <body>
@@ -34,8 +37,9 @@
         {%- if site.data.other.size > 0 -%}
             {%- include other.html -%}
         {%- endif -%}
+
+        {%- include footer.html -%}
     </main>
-    {%- include footer.html -%}
 </body>
 
 </html>
