--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer row">
     <div class="col-auto mr-auto">
-        &copy; {{ site.title }}
+        &copy; {{ "now" | date: "%Y" }} {{ site.title }}
     </div>
     <div class="col-auto socials">
         <a href="mailto:{{ site.email }}">
