--- a/_includes/other.html
+++ b/_includes/other.html
@@ -1,5 +1,5 @@
 <div class="section">
-    <h1 class="display-4">Other</h1>
+    <h1 class="display-4">Activities</h1>
     {% for other in site.data.other %}
         {% include item.html item=other %}
     {% endfor %}
