--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,29 +16,29 @@
 </head>
 
 <body>
-    {%- include header.html -%}
+    {% include header.html %}
     <main id="content" class="container" role="main">
-        {%- if site.data.experience.size > 0 -%}
-            {%- include experience.html -%}
-        {%- endif -%}
+        {% if site.data.experience.size > 0 %}
+            {% include experience.html %}
+        {% endif %}
 
-        {%- if site.data.education.size > 0 -%}
-            {%- include education.html -%}
-        {%- endif -%}
+        {% if site.data.education.size > 0 %}
+            {% include education.html %}
+        {% endif %}
 
-        {%- if site.data.skill.size > 0 -%}
-            {%- include skill.html -%}
-        {%- endif -%}
+        {% if site.data.skill.size > 0 %}
+            {% include skill.html %}
+        {% endif %}
         
-        {%- if site.data.project.size > 0 -%}
-            {%- include project.html -%}
-        {%- endif -%}
+        {% if site.data.project.size > 0 %}
+            {% include project.html %}
+        {% endif %}
 
-        {%- if site.data.other.size > 0 -%}
-            {%- include other.html -%}
-        {%- endif -%}
+        {% if site.data.other.size > 0 %}
+            {% include other.html %}
+        {% endif %}
 
-        {%- include footer.html -%}
+        {% include footer.html %}
     </main>
 </body>
 
