--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,5 +1,5 @@
 <ul class="text-center py-10 text-lg">
-	{%- for item in collections.pages -%}
+	{%- for item in collections.page -%}
 		{% if page.url != item.url %}
 		<li>
 			<a href="{{ item.url }}">{{ item.data.title }}</a>
