--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,7 +4,7 @@
     <link rel="canonical" href="{{ config.url }}{{ page.url }}">
     <link rel="stylesheet" type="text/css" href="/style.css?v={% version %}" />
 
-    <title>{% if title and title != 'Home' %}{{title}} - {% endif %}{{ config.siteTitle }}</title>
+    <title>{{title}}</title>
 
     <!-- Icons -->
     {# <link rel="shortcut icon" type="image/png" href="/images/x16-favicon.png" sizes="16x16" />
@@ -15,6 +15,15 @@
   </head>
   <body>
     <header>
+      <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
+        <div class="lg:flex lg:gap-x-12">
+            {%- for item in collections.page -%}
+              {# {% if page.url != item.url %} #}
+                <a href="{{ item.url }}" class="text-sm font-semibold leading-6 text-gray-900">{{ item.data.title }}</a>
+              {# {% endif %} #}
+            {%- endfor -%}
+        </div>
+      </nav>
     </header> 
     <div>
         {{ content | safe }}
