Add basic cv layout

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -16,7 +16,7 @@
   <body class="bg-white dark:bg-slate-800">
     <header class="flex items-center w-full">
       <div class="container mx-auto">
-        <div class="relative flex items-center justify-between -mx-4">
+        <div class="relative flex items-center justify-between mx-4">
           <div class="flex items-center justify-between w-full px-4 m-8">
             <div>
               <nav class="absolute right-4 top-full w-full max-w-[250px] rounded-lg bg-white py-5 px-6 shadow lg:static lg:block lg:w-full lg:max-w-full lg:shadow-none dark:bg-dark-2 lg:dark:bg-transparent">
@@ -38,7 +38,7 @@
       </div>
     </header>
 
-    <main class="text-center text-slate-500 dark:text-white">
+    <main class="text-center mx-16 text-slate-500 dark:text-white">
       {{ content | safe }}
     </main>
 
