--- a/src/_layouts/sitemap.njk
+++ b/src/_layouts/sitemap.njk
@@ -3,7 +3,7 @@
 {% for item in collections.page %}
   <url>
     <loc>{{ config.url }}{{ item.url }}</loc>
-    <lastmod>{{ item.data.modified | readableDate }}</lastmod>
+    <lastmod>{{ item.data.modified | isoDate }}</lastmod>
     <priority>{% if item.url == '/' %}1.0{% else %}0.8{% endif %}</priority>
   </url>
 {% endfor %}
