Add name to title

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,7 +4,7 @@
     <link rel="canonical" href="{{ config.url }}{{ page.url }}">
     <link rel="stylesheet" type="text/css" href="/style.css?v={% version %}" />
 
-    <title>{{title}}</title>
+    <title>{{title}} - {{ config.author }}</title>
 
     <!-- Icons -->
     {# <link rel="shortcut icon" type="image/png" href="/images/x16-favicon.png" sizes="16x16" />
