--- a/src/pages/cv.njk
+++ b/src/pages/cv.njk
@@ -47,15 +47,17 @@ Software Engineer &amp; Product Owner at Dynatrace, developing Kubernetes Operat
   </ul>
 </section>
 
-<section>
+<section class="mb-8">
   <h2 class="text-xl font-extrabold">Education</h2>
   <ul>
   {%- for education in cv.educations -%}
-    <li class="mb-8">
-      <span class="italic">
-        {{ education.title }}
-        at
-        {{ education.location }}
+    <li class="flex justify-between">
+      <span>
+        {{ education.location }}-{{ education.degree }}
+      </span>
+    
+      <span>
+        {{ education.from }}-{{ education.to }}
       </span>
     </li>
   {%- endfor -%}
