--- a/content/index.njk
+++ b/content/index.njk
@@ -1,9 +1,7 @@
 ---
 title: home
-layout: default
+layout: layouts/base.njk
 tags: page
-modified: 2023-12-27 00:00:00
-order: 1
 ---
 
 <div class="container max-w-lg mx-auto text-xl">
