--- a/content/talks/index.njk
+++ b/content/talks/index.njk
@@ -1,9 +1,7 @@
 ---
 title: talks
-layout: default
+layout: layouts/base.njk
 tags: page
-modified: 2023-12-27 00:00:00
-permalink: "/talks"
 order: 1
 ---
 
