--- a/content/resume/index.njk
+++ b/content/resume/index.njk
@@ -1,12 +1,13 @@
 ---
-title: resume
+title: Resume
 layout: layouts/base.njk
-tags: page
-order: 1
+eleventyNavigation:
+  key: Resume
+  order: 2
 ---
 
 <p class="my-8 text-center italic">
-Software Engineer &amp; Product Owner at Dynatrace, developing Kubernetes Operator to simplify deployment of obsvervability components on Kubernetes clusters.
+Software Engineer &amp; Product Owner at Dynatrace, developing Kubernetes Operator to simplify deployment of observability components on Kubernetes clusters.
 </p>
 
 <section class="mt-8">
