--- a/content/talks/index.njk
+++ b/content/talks/index.njk
@@ -1,8 +1,9 @@
 ---
-title: talks
+title: Talks
 layout: layouts/base.njk
-tags: page
-order: 1
+eleventyNavigation:
+  key: Talks
+  order: 3
 ---
 
 {# todo: speaker description? #}
