--- a/content/index.njk
+++ b/content/index.njk
@@ -1,7 +1,9 @@
 ---
-title: home
+title: Home
 layout: layouts/base.njk
-tags: page
+eleventyNavigation:
+  key: Home
+  order: 1
 ---
 
 <div class="container max-w-lg mx-auto text-xl">
