--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,21 +1,19 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-  <head>    
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}} - {{ config.author }}</title>
+    <meta name="description" content="{{ description or metadata.description }}">
+
     <link rel="canonical" href="{{ config.url }}{{ page.url }}">
     <link rel="stylesheet" type="text/css" href="/tailwind.css?v={% currentBuildDate %}" />
 
-    <title>{{title}} - {{ config.author }}</title>
-
-    <!-- Icons -->
-    {# <link rel="shortcut icon" type="image/png" href="/images/x16-favicon.png" sizes="16x16" />
-    <link rel="shortcut icon" type="image/png" href="/images/x32-favicon.png" sizes="32x32" />
-    <link rel="shortcut icon" type="image/png" href="/images/x64-favicon.png" sizes="64x64" />
-    <link rel="shortcut icon" type="image/png" href="/images/x256-favicon.png" sizes="256x256" />
-    <link rel="apple-touch-icon" type="image/png" href="/images/x256-favicon.png" /> #}
+    <meta name="generator" content="{{ eleventy.generator }}">
   </head>
   <body class="flex flex-col min-h-screen mx-16 lg:mx-64 bg-slate-800">
     <header class="m-8 text-center text-slate-400">
-      <h1 class="text-4xl">Christoph M&uuml;llner</h1>
+      <h1 class="text-4xl">{{ config.author }}</h1>
       <h2 class="text-xl">Software Engineer</h2>
     </header>
     <nav class="sticky top-0 bg-slate-800/30 backdrop-blur-sm">
@@ -36,5 +34,6 @@
       <p>&copy; {{ config.author }}</p>
     </footer>
 
+    <!-- This page `{{ page.url | htmlBaseUrl }}` was built on {% currentBuildDate %} -->
   </body>
 </html>
