Update base template

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}} - {{ config.author }}</title>
-    <meta name="description" content="{{ description or metadata.description }}">
+    <meta name="description" content="{{ config.description }}">
 
     <link rel="canonical" href="{{ config.url }}{{ page.url }}">
     <link rel="stylesheet" type="text/css" href="/tailwind.css?v={% currentBuildDate %}" />
@@ -19,7 +19,7 @@
     <nav class="sticky top-0 bg-slate-800/30 backdrop-blur-sm">
       <ul class="flex justify-around">
       {%- for entry in collections.all | eleventyNavigation %}
-        <li class="py-2 text-lg text-white {{ 'underline' if entry.url == page.url}}">
+        <li class="py-2 text-lg text-white hover:decoration-pink-500 hover:underline {{ 'underline' if entry.url == page.url}}">
           <a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a>
         </li>
       {%- endfor %}
