--- a/content/about/index.njk
+++ b/content/about/index.njk
@@ -2,15 +2,15 @@
 title: About
 layout: layouts/base.njk
 eleventyNavigation:
-  key: About Me
+  key: About
   order: 2
 ---
 
-<p class="my-8 text-center italic">
+<p class="mb-8 text-center italic">
 Software Engineer &amp; Product Owner at Dynatrace, developing Kubernetes Operator to simplify deployment of observability components on Kubernetes clusters.
 </p>
 
-<section class="mt-8">
+<section class="mb-8">
   <h1 class="text-3xl font-extrabold">Experience</h1>
   <ul>
   {%- for experience in cv.experiences -%}
