--- a/content/index.njk
+++ b/content/index.njk
@@ -6,9 +6,13 @@ eleventyNavigation:
   order: 1
 ---
 
-<p class="my-8 text-center italic">
-  Hi, I'm Christoph and live in Austria!
-</p>
+<section>
+  <p class="py-1">Hi, I'm</p>
+  <h1 class="text-4xl text-slate-400">{{ metadata.author.name }}</h1>
+  <p class="py-1">working as</p>
+  <h2 class="text-xl text-slate-400">Software Engineer</h2>
+  <p class="py-1">and live in Austria!</p>
+</section>
 
 <section>
   <ul class="flex flex-wrap gap-1.5">
